[package]
name = "huobi"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["native-tls", "__rustls-tls"]

[features]
default = ["connect"]
connect = ["stream", "tokio/net"]
native-tls = ["native-tls-crate", "tokio-native-tls", "stream", "tungstenite/native-tls"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored", "tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "tokio-rustls", "stream", "tungstenite/__rustls-tls", "webpki"]
stream = []

[dependencies]
dotenv = "*"
flate2 = "*"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.1.0"

[dependencies.tungstenite]
version = "0.17.2"
default-features = false
features = ["native-tls"]

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.7"

[dependencies.rustls]
optional = true
version = "0.20.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.6.1"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dependencies.tokio-rustls]
optional = true
version = "0.23.0"

[dependencies.webpki]
optional = true
version = "0.22.0"

[dependencies.webpki-roots]
optional = true
version = "0.22.1"

[dev-dependencies]
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.9"
